[package]
name = "soroban-bag"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.2.1"
soroban-auth = "0.2.1"
rand = { version = "0.7.3" }


[dev_dependencies]
soroban-sdk = { version = "0.2.1", features = ["testutils"] }
soroban-auth = { version = "0.2.1", features = ["testutils"] }
soroban-bag = { path = ".", features = ["testutils"] }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-spec = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-auth = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-sdk-macros = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-env-guest = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-env-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-native-sdk-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "3ba1368" }